--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@swc/core": "^1.3.18",
     "@types/bcrypt": "^10.0.28-alpha",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.189",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "@types/nodemon": "^1.19.2",
@@ -27,17 +29,19 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "tslib": "^2.4.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.2",
+    "tslib": "^2.4.1",
     "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   }
