--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "nodemon",
-    "test": "test",
-    "typeorm": "ts-node -r reflect-metadata -r dotenv/config ./node_modules/.bin/typeorm -d src/datasource.ts"
+    "test": "test"
   },
   "author": "",
   "license": "ISC",
@@ -27,18 +26,10 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "tslib": "^2.4.1",
-    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.2",
-    "typeorm": "^0.3.10",
-    "uuid": "^9.0.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.4.1"
   }
 }
